--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Fredoka+One&display=swap");
+
 * {
   margin: 0;
   padding: 0;
