--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Fredoka+One&family=Fredoka:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Fredoka+One&family=Fredoka:wght@300;400&display=swap");
 
 * {
   margin: 0;
